refactor: xml assertion